<resources>
    <string name="app_name">Certainty Factor</string>
    <string name="daftar_penyakit">Daftar Penyakit</string>
    <string name="daftar_gejala">Daftar Gejala</string>
    <string name="gejala">gejala</string>
    <string name="todo">TODO</string>
    <string name="diagnosa">Diagnosa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="perido">Peridontitis</string>
    <string name="periodontitis">
        Periodontitis adalah infeksi gusi yang merusak gigi, jaringan lunak,
        dan tulang penyangga gigi. Kondisi ini harus segera diobati
        karena dapat menyebabkan komplikasi serius.
    </string>
    <string name="ging">Gingivitis</string>
    <string name="gingi">
        Radang gusi atau gingivitis adalah peradangan pada
        gusi yang ditandai oleh memerahnya gusi di sekitar akar gigi.
        Gingivitis terjadi ketika sisa makanan di gigi dan gusi mengeras
        menjadi plak.
    </string>
    <string name="abs">Abses Gigi</string>
    <string name="abse">
        Abses gigi adalah terbentuknya kantung atau benjolan berisi nanah 
        pada gigi. Abses gigi disebabkan oleh infeksi bakteri. Kondisi ini 
        bisa muncul di sekitar akar gigi maupun di gusi.
    </string>
    <string name="gej1">
        Nyeri \nPenumpukan karang \nJarak gigirenggang \nGusi menyusut
        \nGusi merah \nGusi lunak \nGusi bengkak \nGusi mudah berdarah
        \nNapas bau \nKeluar nanah \nGigi goyang
    </string>
    <string name="gej2">
        Nyeri \nNapas bau \nGusi merah \nGusi bengkak \nGusi menyusut
        \nGusi mudah berdarah \nGigi palsu tidak pas \nGigi tanggal \nKeluar nanah
    </string>
    <string name="gej3">
        Demam \nNapas bau \nGusi bengkak \nSakit saat mengunyah \nSakit gigi hingga telinga
        \nSensitif makanan
    </string>
    <string name="nilai">Masukan Nilai Kepercayaan</string>
    <string name="gejala_1">Nyeri</string>
    <string name="gejala_2">Demam</string>
    <string name="gejala_3">Napas Bau</string>
    <string name="gejala_4">Gusi bewarna merah</string>
    <string name="gejala_5">Gusi terasa lunak</string>
    <string name="gejala_6">Gusi Bengkak</string>
    <string name="gejala_7">Gusi mudah berdarah</string>
    <string name="gejala_8">Gusi menyusut</string>
    <string name="gejala_9">Gigi berubah warna</string>
    <string name="gejala_10">Gigi goyang</string>
    <string name="gejala_11">Gigi palsu terasa tidak pas</string>
    <string name="gejala_12">Gigi tanggal</string>
    <string name="gejala_13">Rasa sakit saat mengunyah</string>
    <string name="gejala_14">Sakit gigi menyebar hingga telinga</string>
    <string name="gejala_15">Jarak gigi renggang</string>
    <string name="gejala_16">Sensitif pada makanan</string>
    <string name="gejala_17">Keluarnya nanah pada gusi</string>
    <string name="hasil">HASIL</string>
    <string name="deteksi">DETEKSI</string>


</resources>