<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="521dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_penyakit"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/daftar_penyakit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ib_gejala"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.241"
            app:srcCompat="@drawable/ic_tooth" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="6dp"
            android:text="@string/daftar_penyakit"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108" />

        <ImageButton
            android:id="@+id/ib_gejala"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_marginStart="216dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/todo"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.241"
            app:srcCompat="@drawable/ic_care" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="144dp"
            android:layout_height="26dp"
            android:layout_marginStart="224dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="11dp"
            android:text="@string/daftar_gejala"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/ib_gejala"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" />

        <ImageButton
            android:id="@+id/ib_diagnosa"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="123dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_dentist"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="121dp"
            android:layout_height="32dp"
            android:layout_marginStart="171dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="170dp"
            android:text="@string/diagnosa"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_gejala"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>